--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/hall.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/hall.html
@@ -306,7 +306,7 @@
         <script type="text/javascript">
             document.write('<li><a href="includes/leagueRules.html?_=' + (new Date().getTime()) + '">League Rules (updated)</a></li>');
         </script>
-        <li><a href="includes/instruction.html">Manual</a></li>
+        <li><a href="includes/instruction.html">Instructions</a></li>
         <li><a href="/gemp-lotr-server/hall/formats/html">Format Rules</a></li>
         <li><a href="includes/contribute.html">Contribute</a></li>
         <li><a href="includes/yourStats.html">Your stats</a></li>
