--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/admin.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/admin.html
@@ -21,5 +21,13 @@
     <input type="submit" value="Add items">
 </form>
 
+<h2>Add items to collection</h2>
+
+<form method="POST" action="/gemp-lotr-server/admin/addItemsToCollection">
+    Type: <input type="text" name="collectionType"><br/>
+    Product: <textarea rows="5" cols="20" name="product"></textarea><br/>
+    <input type="submit" value="Add items to collection">
+</form>
+
 </body>
 </html>
