Added reason to add items to collections form.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/admin.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/admin.html
@@ -25,6 +25,7 @@
 
 <form method="POST" action="/gemp-lotr-server/admin/addItemsToCollection">
     Type: <input type="text" name="collectionType"><br/>
+    Reason: <input type="text" name="reason"><br/>
     Product: <textarea rows="5" cols="20" name="product"></textarea><br/>
     <input type="submit" value="Add items to collection">
 </form>
