Display count of cards in collection and updating them.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/deckBuild2.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/deckBuild2.html
@@ -35,6 +35,14 @@
             border: solid #000000;
         }
 
+        .card .count {
+            position: absolute;
+            font-weight: bolder;
+            display: table-cell;
+            text-align: right;
+            vertical-align: top;
+        }
+
         .deckPart {
             position: relative;
         }
