Work on deck panel.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/deckBuild2.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/deckBuild2.html
@@ -63,6 +63,7 @@
     <script type="text/javascript" src="/generic-tcg/js/CardContainer.js"></script>
     <script type="text/javascript" src="/generic-tcg/js/CardGroup.js"></script>
     <script type="text/javascript" src="/generic-tcg/js/RowCardLayoutCardGroup.js"></script>
+    <script type="text/javascript" src="/generic-tcg/js/AttachedCardsLayoutCardGroup.js"></script>
     <script type="text/javascript" src="/generic-tcg/js/jquery/jquery-sizes.js"></script>
 
     <script type="text/javascript" src="js/gemp-012/communication.js"></script>
