Work on deck panel.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/deckBuild2.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/deckBuild2.html
@@ -109,6 +109,7 @@
                             );
 
                     var doLayout = function() {
+                        log("deckBuild2.html::doLayout");
                         var collectionWidth = $("#collectionDiv").width();
                         var collectionHeight = $("#collectionDiv").height();
                         var deckWidth = $("#deckPanel").width();
