Display card information window.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/deckBuild2.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/deckBuild2.html
@@ -72,6 +72,7 @@
     <script type="text/javascript" src="js/gemp-012/jCards.js"></script>
     <script type="text/javascript" src="js/gemp-012/cardFilter2.js"></script>
     <script type="text/javascript" src="js/gemp-012/DeckPanel.js"></script>
+    <script type="text/javascript" src="js/gemp-012/CardInformationDialog.js"></script>
     <script type="text/javascript" src="js/gemp-012/deckBuildingUi2.js"></script>
 
     <script type="text/javascript">
