--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/deckBuild2.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/deckBuild2.html
@@ -11,6 +11,7 @@
     <style type="text/css">
         body {
             font-size: 12px;
+            color: #ffffff;
         }
 
         .panel {
@@ -123,7 +124,7 @@
                         onresize:function () {
                             doLayout();
                         },
-                        north__minSize: 200
+                        north__minSize: 230
                     });
 
                     $("#northPanel").layout({
@@ -131,7 +132,7 @@
                         onresize:function() {
                             doLayout();
                         },
-                        west__minSize: 370
+                        west__minSize: 305
 
                     });
 
