--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/hall.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/hall.html
@@ -14,6 +14,12 @@
         background-color: #000000;
     }
 
+    .eventHeader {
+        font-size: 120%;
+        font-weight: bolder;
+        background-color: #666666;
+    }
+
     .leagueName, #stats .period, .tournamentName, .playerStatHeader {
         font-size: 200%;
         font-weight: bolder;
