--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/leagueAdmin.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/leagueAdmin.html
@@ -1,10 +1,12 @@
+<%@ page contentType="text/html; charset=UTF-8"%>
+<%
+response.setHeader("Cache-Control","no-cache");
+response.setHeader("Pragma","no-cache");
+response.setDateHeader ("Expires", -1);
+%>
 <html>
 <head>
     <title>Gemp-LotR League Administration</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta http-equiv="pragma" content="no-cache"/>
-    <meta http-equiv="Cache-Control" content="no-cache"/>
-    <meta http-equiv="Expires" content="-1">
 
     <style type="text/css">
         body {
@@ -24,24 +26,8 @@
         }
     </style>
 
-    <link rel="stylesheet" type="text/css" href="css/dark-hive/jquery-ui-1.8.16.custom.css">
-    <link rel="stylesheet" type="text/css" href="css/jquery.contextMenu.css">
-    <link rel="stylesheet" type="text/css" href="js/jquery/styles/jquery.spinnercontrol.css">
+    <%@ include file="js.inc" %>
 
-    <script type="text/javascript" src="js/jquery/jquery-1.6.2.js"></script>
-    <script type="text/javascript" src="js/jquery/jquery-ui-1.8.16.custom.min.js"></script>
-    <script type="text/javascript" src="js/jquery/jquery.cookie.js"></script>
-    <script type="text/javascript" src="js/jquery/jquery.spinnercontrol.js"></script>
-    <script type="text/javascript" src="js/jquery/jquery.touchSwipe.js"></script>
-
-    <script type="text/javascript" src="js/gemp-013/inheritance.js"></script>
-    <script type="text/javascript" src="js/gemp-013/communication.js"></script>
-    <script type="text/javascript" src="js/gemp-013/common.js"></script>
-    <script type="text/javascript" src="js/gemp-013/chat.js"></script>
-    <script type="text/javascript" src="js/gemp-013/commonUi.js"></script>
-    <script type="text/javascript" src="js/gemp-013/jCardGroup.js"></script>
-    <script type="text/javascript" src="js/gemp-013/jCards.js"></script>
-    <script type="text/javascript" src="js/gemp-013/logging.js"></script>
     <script type="text/javascript">
         function submitFormToAddress(url, formElem, success, error) {
             var data = {};
