--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/hall.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/hall.html
@@ -20,6 +20,7 @@ response.setDateHeader ("Expires", -1);
 
     $(document).ready(
             function () {
+                $("#latestNews").append("<div class='serverTime' style='float: right'></div>");
                 $("#latestNews").append("<b>All sets are available to play.</b> "
                         + "If you find any problems with specific card or rules in general, please report it <a href='http://lotrtcgdb.com/forums/index.php/topic,7592.0.html'>at the TLHH forums</a>.");
 
