--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/hall.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/hall.html
@@ -24,7 +24,7 @@ response.setDateHeader ("Expires", -1);
                 $("#latestNews").append("<b>All sets are available to play.</b> "
                         + "If you find any problems with specific card or rules in general, please report it <a href='http://lotrtcgdb.com/forums/index.php/topic,7592.0.html'>at the TLHH forums</a>.");
 
-                chat = new ChatBoxUI("Game Hall", $("#chat"), "/gemp-lotr-server", true, null, true);
+                chat = new ChatBoxUI("Game Hall", $("#chat"), "/gemp-lotr-server", true, null, true, true);
                 chat.setBounds(2, 2, 780 - 4, 200 - 4);
                 chat.showTimestamps = true;
 
